--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
   "license": "ISC",
   "dependencies": {
     "body": "^5.1.0",
+    "body-parser": "^2.2.0",
     "cookie": "^1.0.2",
+    "cookie-parse": "^0.4.0",
+    "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "parser": "^0.1.4",
     "session": "^0.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rahulpatil-923/library-management-system.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rahulpatil-923/library-management-system/issues"
+  },
+  "homepage": "https://github.com/rahulpatil-923/library-management-system#readme"
 }
