--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body": "^5.1.0",
+    "cloudinary": "^2.6.1",
     "cookie": "^1.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "parser": "^0.1.4",
+    "express-fileupload": "^1.5.1",
+    "mysql2": "^3.14.1",
+    "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.3",
     "session": "^0.1.0"
   }
 }
