added new style to dashboard

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
+    "express-session": "^1.18.1",
     "mysql2": "^3.14.1",
     "node-cron": "^4.1.0",
     "nodemailer": "^7.0.3",
